BCMOHAD-31628 (#309)
BCMOHAD-31628: Fix Active User Count dashboard query so it does not rely on role mappings. Cache results.